--- a/mDNIe/res/values/strings.xml
+++ b/mDNIe/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="app_name">jnigl</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_jni_gl">JniGLActivity</string>
+    <string name="title_activity_jni_gl">IP_mDNIe</string>
 
 </resources>
