--- a/mDNIe/res/values/strings.xml
+++ b/mDNIe/res/values/strings.xml
@@ -6,22 +6,12 @@
     <string name="title_activity_jni_gl">IP_mDNIe</string>
 
     <string-array name="jazz_artist_names">
-        <item>Brad Mehldau</item>
-        <item>Joshua Redman</item>
-        <item>Chick Corea</item>
-        <item>Kurt Rosenwinkel</item>
-        <item>Miles Davis</item>
-        <item>Wayne Shorter</item>
-        <item>Michael Brecker</item>
-        <item>Herbie Hancock</item>
-        <item>Joe Zawinul</item>
-        <item>Brian Blade</item>
-        <item>Jeff Ballard</item>
-        <item>Larry Grenadier</item>
-        <item>Keith Jarrett</item>
-        <item>McCoy Tyner</item>
-        <item>Stephon Harris</item>
-        <item>Mark Turner</item>
+        <item>Algorithm1</item>
+        <item>Algorithm2</item>
+        <item>Algorithm3</item>
+        <item>Algorithm4</item>
+        <item>Algorithm5</item>
+        <item>Algorithm6</item>
     </string-array>
 
 </resources>
