--- a/mDNIe/res/values/strings.xml
+++ b/mDNIe/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_jni_gl">IP_mDNIe</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 
-    <string-array name="jazz_artist_names">
+    <string-array name="algorithmlist">
         <item>Algorithm 1</item>
         <item>Algorithm 2</item>
         <item>Algorithm 3</item>
@@ -13,9 +15,7 @@
         <item>Algorithm 5</item>
         <item>Algorithm 6</item>
     </string-array>
-	
-    
-     <string-array name="param">
+    <string-array name="parameterlist">
         <item>Parameter 1</item>
         <item>Parameter 2</item>
         <item>Parameter 3</item>
@@ -23,6 +23,20 @@
         <item>Parameter 5</item>
         <item>Parameter 6</item>
     </string-array>
-    
-     
+    <string-array name="menu_list">
+        <item>Image Load</item>
+        <item>Image Save</item>
+        <item>Algo and Parm setting</item>
+        <item>Register Load</item>
+        <item>Register Save</item>
+    </string-array>
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="action_websearch">Web search</string>
+    <string name="action_viewmode">View mode</string>
+    <string name="action_result">Result</string>
+    <string name="app_not_available">Sorry, there\'s no web browser available</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
